...
        app:tabIndicatorFullWidth="false"
        app:tabRippleColor="@android:color/transparent"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="@color/lightGray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />
...
